# vibe-scraping

./: .dockerignore  .env.example  .gitignore  Dockerfile  MANIFEST.in  README.md  cli.py  example.py  main.py  pyproject.toml  requirements.txt  selenium_scraper.py  setup.py
docs/: index.md  visualization.md
examples/: analyze_content.py  analyze_html.py  analyze_with_groq.py  basic_crawler.py  crawl_and_analyze.py  crawl_and_upload_s3.py  crawler_example.py  example_crawler_graph.py  example_visualization.py  quickstart.py  usage_examples.py
run/: crawl_and_upload.py  run.py
tests/: test_crawler.py  test_vibe_scraping.py
vibe_scraping/: __init__.py  analyzer.py  cli.py  crawler.py  example.py  html_analyzer.py  html_processor.py  main.py  scrapy_adapter.py  selenium_scraper.py  visualizer.py
