[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-scraping"
version = "0.2.0"
description = "A library for scraping product information from websites using Groq API"
readme = "README.md"
authors = [
    {name = "Luka", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "beautifulsoup4",
    "groq",
    "python-dotenv",
    "selenium",
]
requires-python = ">=3.6"

[project.optional-dependencies]
advanced = [
    "undetected-chromedriver",
    "webdriver-manager",
]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "isort>=5.0",
    "flake8>=3.9",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/vibe-scraping"
"Bug Tracker" = "https://github.com/yourusername/vibe-scraping/issues"

[project.scripts]
vibe-scrape = "vibe_scraping.cli:main" 