[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-scraping"
version = "0.3.0"
description = "Lightweight web crawler using Scrapy for deep web crawling"
readme = "README.md"
authors = [
    {name = "Luka", email = "lukalortkipanidze1@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "beautifulsoup4",
    "groq",
    "python-dotenv",
    "selenium",
    "boto3",
    "Scrapy>=2.8.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "isort>=5.0",
    "flake8>=3.9",
]
advanced = [
    "undetected-chromedriver",
    "webdriver-manager",
]

[project.urls]
"Homepage" = "https://github.com/l0rtk/vibe-scraping"
"Bug Tracker" = "https://github.com/l0rtk/vibe-scraping/issues"

[project.scripts]
vibe-scrape = "vibe_scraping.cli:main" 